# abeille

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile
Core/: core.h
RPC/: Server.h  raft_server.h  server.cpp  server.h
RPC/proto/: example.proto  raft_entry.proto  raft_service.proto
Raft/: raft.h
cmd/: main.cpp
common/: CMakeLists.txt
common/example/: client_config.json
common/include/: client_config.hpp
common/src/: client_config.cpp
constants/: CMakeLists.txt
constants/include/: constants.hpp
errors/include/: errors.hpp
raft/: CMakeLists.txt
raft/cmd/: main.cpp
raft/common/: CMakeLists.txt
raft/common/include/: common.hpp
raft/config/: CMakeLists.txt
raft/config/include/: config.hpp
raft/config/src/: config.cpp
raft/consensus/: CMakeLists.txt
raft/consensus/include/: raft_consensus.hpp
raft/consensus/src/: raft_consensus.cpp
raft/core/: CMakeLists.txt  core.h
raft/core/include/: core.hpp
raft/core/src/: core.cpp
raft/example/: raft_config_1.json  raft_config_2.json
raft/log/: CMakeLists.txt
raft/log/include/: log.hpp
raft/log/src/: log.cpp
raft/raft/: raft.h  raft_client.h
raft/rpc/: CMakeLists.txt
raft/rpc/include/: raft_service.hpp  user_service.hpp  worker_service.hpp
raft/rpc/src/: raft_service.cpp  user_service.cpp  worker_service.cpp
raft/state_machine/: CMakeLists.txt
raft/state_machine/include/: state_machine.hpp
raft/state_machine/src/: state_machine.cpp
raft/task_manager/: CMakeLists.txt
raft/task_manager/include/: task_manager.hpp
raft/task_manager/src/: task_manager.cpp
raft/thread_pools/: CMakeLists.txt
raft/thread_pools/include/: peer.hpp  raft_pool.hpp  worker_pool.hpp
raft/thread_pools/src/: peer.cpp  raft_pool.cpp
raft_node/: CMakeLists.txt
raft_node/Core/: core.cpp  core.h
raft_node/Raft/: peer.h
raft_node/cmd/: main.cpp
raft_node/config/: CMakeLists.txt
raft_node/config/include/: config.hpp
raft_node/config/src/: config.cpp
raft_node/core/: CMakeLists.txt
raft_node/core/config/: CMakeLists.txt
raft_node/core/config/include/: config.hpp
raft_node/core/config/src/: config.cpp
raft_node/core/include/: core.hpp
raft_node/core/src/: core.cpp
raft_node/example/: raft_config_0.json  raft_config_1.json  raft_config_2.json
raft_node/include/: core.hpp
raft_node/log/: CMakeLists.txt
raft_node/log/include/: log.hpp
raft_node/log/src/: log.cpp
raft_node/raft_consensus/: CMakeLists.txt
raft_node/raft_consensus/include/: raft_consensus.hpp
raft_node/raft_consensus/src/: raft_consensus.cpp
raft_node/rpc_raft/: CMakeLists.txt
raft_node/rpc_raft/include/: raft_service.hpp  user_service.hpp  worker_service.hpp
raft_node/rpc_raft/src/: raft_service.cpp  user_service.cpp  worker_service.cpp
raft_node/rpc_services/: CMakeLists.txt
raft_node/rpc_services/include/: raft_service.hpp  user_service.hpp
raft_node/rpc_services/src/: raft_service.cpp  user_service.cpp
raft_node/src/: core.cpp  main.cpp
raft_node/state_machine/: CMakeLists.txt
raft_node/state_machine/include/: state_machine.hpp
raft_node/state_machine/src/: state_machine.cpp
raft_node/task_manager/: CMakeLists.txt
raft_node/task_manager/include/: task_manager.hpp
raft_node/task_manager/src/: task_manager.cpp
raft_node/thread_pools/: CMakeLists.txt
raft_node/thread_pools/include/: peer.hpp  raft_pool.hpp  worker.hpp  worker_pool.hpp
raft_node/thread_pools/src/: peer.cpp  raft_pool.cpp
rpc/: CMakeLists.txt
rpc/include/: client.hpp  raft_server.hpp  raft_service.hpp  server.hpp  service.hpp  user_server.hpp  user_service.hpp
rpc/proto/: abeille.grpc.pb.cc  abeille.grpc.pb.h  abeille.pb.cc  abeille.pb.h  abeille.proto
rpc/protos/: abeille.grpc.pb.cc  abeille.pb.cc  abeille.pb.h
rpc/src/: raft_server.cpp  raft_service.cpp  server.cpp  user_server.cpp  user_service.cpp
rpc_global/: CMakeLists.txt
rpc_global/include/: client.hpp  server.hpp  service.hpp
rpc_global/proto/: abeille.grpc.pb.cc  abeille.grpc.pb.h  abeille.pb.cc  abeille.pb.h  abeille.proto
rpc_global/src/: server.cpp
run/data/: test.json
src/: main.cpp
task_manager/include/: task_manager.hpp
user/: CMakeLists.txt
user/cmd/: main.cpp
user/data/: test.json
user/include/: client.hpp  commands.hpp  data_processor.hpp  registry.hpp  user_client.hpp
user/model/proto/: task.pb.cc  task.pb.h  task.proto
user/src/: client.cpp  commands.cpp  data_processor.cpp  main.cpp  user_client.cpp
utils/: CMakeLists.txt  status.h
utils/config/: CMakeLists.txt
utils/config/include/: config.hpp
utils/config/src/: config.cpp
utils/include/: cli.hpp  constants.hpp  convert.hpp  errors.hpp  logger.hpp  macroses.hpp  status.hpp  types.hpp
utils/src/: cli.cpp  convert.cpp  logger.cpp
worker/: CMakeLists.txt
worker/client/cmd/: main.cpp
worker/client/include/: worker_client.hpp
worker/client/src/: worker_client.cpp
worker/cmd/: main.cpp
worker/include/: worker_client.hpp
worker/server/: CMakeLists.txt
worker/server/cmd/: main.cpp
worker/server/include/: worker_service.hpp
worker/server/src/: worker_service.cpp
worker/services/: CMakeLists.txt
worker/services/cmd/: main.cpp
worker/services/include/: worker_service.hpp
worker/services/src/: worker_service.cpp
worker/src/: worker_client.cpp
